Finish crispy forms

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -5,7 +5,7 @@
 
     {% for post in posts %}
     {% row  'border-bottom' %}
-        {% col 'p-2 bg-dark'%}
+        {% col 'p-2 bg-dark animate__animated animate__fadeInLeft'%}
           <div class="card p-3 bg-light text-dark border border-warning border-3">
             <h3 class="display-3 mb-2 card-title text-Dark fw-bold text-center">{{ post.title }}</h3>
             <div class="text-center">
