--- a/templates/blog/post-byline.html
+++ b/templates/blog/post-byline.html
@@ -1,6 +1,6 @@
 {% load blog_extras %}
 
-<small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+<small class="badge bg-warning ">By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
 {% comment %}
 <!-- <small>By {% author_details_tag %} on {{ post.published_at|date:"M, d Y" }}</small> -->
 {% endcomment %}
