--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% load blog_extras %}
 {% block content %}
-<h2 class='text-center m-3'>{{ post.title }}</h2>
+<h2 class='text-center m-3 fw-bold display-2 text-warning'>{{ post.title }}</h2>
 {% row %}
     <div class="col">
         {% include "blog/post-byline.html" %}
     </div>
 {% endrow %}
 {% row %}
-    <div class="col animate animate__lightSpeedInRight">
+    <div class="col animate__animated animate__lightSpeedInRight">
         {{ post.content|safe }}
     </div>
 {% endrow %}
+{% include "blog/post-comments.html" %}
 {% row 'mt-5'%}
     {% col 'mb-2'%}
         {% recent_posts post %}
