--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,23 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-    <title>Hello, world!</title>
+    <title>{% block title %}Welcome to Blango{% endblock %}</title>
   </head >
   <body class="container bg-dark text-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Blango Home</a>
+        <div class="d-flex">
+            {% if request.user.is_active %}
+                <a class="nav-link" href="{% url "profile" %}">Profile</a>
+                <a class="nav-link" href="{% url "logout" %}">Log Out</a>
+            {% else %}
+                <a class="nav-link" href="{% url "django_registration_register" %}">Register</a>
+                <a class="nav-link" href="{% url "login" %}">Log In</a>
+            {% endif %}
+        </div>
+    </div>
+</nav>
   <div class="container-fluid">
     {% block content %}
 
