--- a/blog/templates/blog/post-table.html
+++ b/blog/templates/blog/post-table.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <script src="{% static "blog/blog.js" %}"></script>
+{% block title %}Post Table{% endblock %}
+  <script type="text/babel" src="{% static "blog/blog.js" %}"></script>
   <div class="row">
     <div class="col">
         <div id="react_root"></div>
@@ -9,4 +10,5 @@
 </div>
 <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 {% endblock %}
