Finish fetch and React hooks

--- a/blog/templates/blog/post-table.html
+++ b/blog/templates/blog/post-table.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block content %}
 {% block title %}Post Table{% endblock %}
+<script>
+    const postListUrl = '{{ post_list_url|escapejs }}'
+</script>
   <script type="text/babel" src="{% static "blog/blog.js" %}"></script>
   <div class="row">
     <div class="col">
